# luixbits-noctalia-plugins

./: .gitignore  LICENSE  README.md  catalog.toml
archive/casio-deck-qml/: Main.qml  README.md  Settings.qml  install-qml-casio-deck.sh  manifest.json
casio-deck/: PLAN.md  README.md  bridge.luau  dashboard.luau  plugin.toml  shortcut.luau  status.luau
casio-deck/assets/: README.md
casio-deck/data/: actions.deck  models.deck
casio-deck/entries/: README.md
casio-deck/entries/service/: bridge.luau
casio-deck/entries/shortcuts/: shortcut.luau
casio-deck/examples/: mock-helper.sh
casio-deck/helper/: README.md  pyproject.toml
casio-deck/helper/src/casio_deck_helper/: __init__.py  abl100.py  bluez.py  cli.py  debounce.py  model_types.py  models.py  protocol.py  runtime.py
casio-deck/helper/src/casio_deck_helper/adapters/abl100/: action_sessions.py  app_connection.py  app_info.py  connection.py  device.py  fixed_connection.py  fixed_sessions.py  model.py  pairing_session.py  post_init.py  runtime.py  session_common.py  time_sync.py  triggers.py
casio-deck/helper/tests/: test_helper_foundation.py
casio-deck/qml/: BarWidget.qml  Panel.qml  README.md  manifest.json
casio-deck/translations/: en.json
docs/: helper-protocol.md  plugin-source.md
docs/casio-deck/: hardware-notes.md  persistent-connection-plan.md
scripts/: install-qml-casio-deck.sh  run-abl100-helper.sh  smoke-casio-deck.sh  validate.sh
scripts/dev/: capture-abl100-session.sh  smoke-casio-deck.sh
scripts/helper/: run-abl100-helper.sh  stop-abl100-helper.sh
(+2 files in other folders)
